--- a/spring_ioc_1/pom.xml
+++ b/spring_ioc_1/pom.xml
@@ -67,6 +67,16 @@
       <artifactId>aopalliance</artifactId>
       <version>1.0</version>
     </dependency>
+      <dependency>
+          <groupId>org.springframework</groupId>
+          <artifactId>spring-beans</artifactId>
+          <version>5.0.5.RELEASE</version>
+      </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <version>5.0.5.RELEASE</version>
+    </dependency>
 
 
   </dependencies>
